# advanced_semantic_chunker

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
chunker/: __init__.py  async_chunker.py  batch_processor.py  cache.py  config.py  core.py  deduplicator.py  document_tree.py  error_handler.py  exceptions.py  lazy_load.py  metrics_collector.py  models.py  structured_logger.py  utils.py
chunker/embeddings/: __init__.py  base.py  openai_provider.py  sentence_transformer.py
chunker/integrations/: __init__.py  chroma.py  pinecone.py  qdrant.py
chunker/language/: __init__.py  arabic.py  detector.py  english.py  normalizer.py
chunker/readers/: __init__.py  epub_reader.py  html_reader.py  pdf_reader.py
chunker/strategies/: __init__.py  agentic.py  base.py  fixed.py  hierarchical.py  recursive.py  semantic.py  sentence.py  structure_aware.py
docs/: installation.md  quick_start.md  structured_logging.md  user_guide.md
examples/: batch_processing_example.py  demo.py  metrics_example.py  structured_logging_example.py
tests/: test_batch_embedding.py  test_batch_embedding_consolidation.py  test_batch_processor.py  test_batch_processor_integration.py  test_cache.py  test_chunker.py  test_config_validation.py  test_embedding_memory_cleanup.py  test_error_handler.py  test_lazy_load.py  test_lazy_load_properties.py  test_metrics_integration.py  test_structured_logger.py  test_structured_logger_integration.py
