[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-semantic-chunker"
version = "1.1.0"
description = "Powerful bilingual (EN/AR) semantic document chunking engine for RAG pipelines"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.24.0", "nltk>=3.8.0"]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=2.2.0"]
openai = ["openai>=1.0.0"]
nlp = ["nltk>=3.8.0", "spacy>=3.6.0"]
arabic = ["stanza>=1.6.0", "camel-tools>=1.5.0"]
readers = ["pypdf>=3.0.0", "beautifulsoup4>=4.12.0", "ebooklib>=0.18"]
all = [
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "nltk>=3.8.0",
    "stanza>=1.6.0",
    "pypdf>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "tiktoken>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/advanced-semantic-chunker"
Issues = "https://github.com/yourusername/advanced-semantic-chunker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chunker*"]
